aws/jenkins/iac_terraform_aws_jenkins/security-groups/security_groups.tf
resource "aws_security_group" "jenkins_sg" {
  name        = "${var.jenkins_sg_name}"
  description = "Security group to be attached to jenkins instance"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = "${var.vpc_id}"

  tags {
    Name = "${var.jenkins_sg_name}"
  }
}

output "jenkins_sg_id" {
  value = "${aws_security_group.jenkins_sg.id}"
}
